--- a/package.json
+++ b/package.json
@@ -26,10 +26,11 @@
     "@angular/router": "^5.2.0",
     "bootstrap": "^4.1.0",
     "core-js": "^2.4.1",
+    "electron-json-storage": "^4.1.0",
     "font-awesome": "^4.7.0",
-
     "moment": "^2.22.1",
     "ngx-bootstrap": "^2.0.3",
+    "ngx-webstorage": "^2.0.1",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
