--- a/package.json
+++ b/package.json
@@ -3,15 +3,14 @@
   "version": "0.0.0",
   "license": "MIT",
   "main": "main.js",
+  "productName": "Unas Scheduler",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --prod",
     "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e",
-    "electron": "electron .",
-    "electron-build": "ng build --prod"
+    "e2e": "ng e2e"
   },
   "private": true,
   "dependencies": {
@@ -27,9 +26,11 @@
     "bootstrap": "^4.1.0",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
+    "jquery": "^3.3.1",
     "moment": "^2.22.1",
     "ngx-bootstrap": "^2.0.3",
     "ngx-webstorage": "^2.0.1",
+    "popper.js": "^1.14.7",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
@@ -41,7 +42,6 @@
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
     "codelyzer": "^4.0.1",
-    "electron": "^1.8.4",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~2.0.0",
